<?xml version="1.0" encoding="utf-8"?><!--
  Copyright (C) 2018 Eric Afenyo

  Licensed under the Apache License, Version 2.0 (the "License");
  you may not use this file except in compliance with the License.
  You may obtain a copy of the License at

    http://www.apache.org/licenses/LICENSE-2.0

  Unless required by applicable law or agreed to in writing, software
  distributed under the License is distributed on an "AS IS" BASIS,
  WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
  See the License for the specific language governing permissions and
  limitations under the License.
  -->

<androidx.constraintlayout.widget.ConstraintLayout
  xmlns:android="http://schemas.android.com/apk/res/android"
  xmlns:app="http://schemas.android.com/apk/res-auto"
  xmlns:tools="http://schemas.android.com/tools"
  android:layout_width="match_parent"
  android:layout_height="wrap_content"
  android:background="@color/colorWhite">

  <TextView
    android:id="@+id/text_article_source"
    style="@style/TextAppearance.Overline"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_marginTop="32dp"
    android:layout_marginStart="@dimen/activity_horizontal_margin"
    android:contentDescription="@string/accessibility_source"
    app:layout_constraintStart_toStartOf="parent"
    app:layout_constraintTop_toTopOf="parent"
    tools:text="@tools:sample/full_names"/>

  <TextView
    android:id="@+id/text_article_title"
    style="@style/TextAppearance.Subtitle1"
    android:layout_width="0dp"
    android:layout_height="wrap_content"
    android:layout_marginTop="8dp"
    android:layout_marginBottom="32dp"
    android:layout_marginStart="@dimen/activity_horizontal_margin"
    android:layout_marginEnd="16dp"
    android:contentDescription="@string/accessibility_title"
    android:ellipsize="end"
    android:maxLines="2"
    android:textAppearance="@style/TextAppearance.MaterialComponents.Subtitle1"
    app:layout_constraintBottom_toBottomOf="parent"
    app:layout_constraintEnd_toStartOf="@+id/image_article_thumbnail"
    app:layout_constraintHorizontal_bias="0.0"
    app:layout_constraintStart_toStartOf="parent"
    app:layout_constraintTop_toBottomOf="@+id/text_article_source"
    tools:text="Paris attacker identified as Chechen-born French citizen"/>

  <ImageView
    android:id="@+id/image_article_thumbnail"
    android:layout_width="64dp"
    android:layout_height="64dp"
    android:layout_marginTop="16dp"
    android:layout_marginEnd="@dimen/activity_horizontal_margin"
    android:contentDescription="@string/accessibility_thumbnail"
    android:scaleType="centerCrop"
    app:layout_constraintEnd_toEndOf="parent"
    app:layout_constraintTop_toTopOf="parent"
    tools:src="@drawable/business"/>

  <TextView
    android:id="@+id/text_article_published_time"
    style="@style/TextAppearance.Overline"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_marginEnd="16dp"
    android:contentDescription="@string/accessibility_description"
    app:layout_constraintEnd_toStartOf="@+id/image_article_thumbnail"
    app:layout_constraintTop_toTopOf="@+id/text_article_source"
    tools:text="@tools:sample/date/mmddyy"/>


</androidx.constraintlayout.widget.ConstraintLayout>
